Final version, add UI, redme. Edited js, css, html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="utf-8">
   <title>Rock-Paper-Scizor</title>
   <link rel="stylesheet" href="./css/index.css">
-  <script type="text/javascript" src="./js/index.js"></script>
+  <script type="text/javascript" src="./js/index.js" defer></script>
 </head>
-<body>
-
+<body>  
+  <div class="warper">
+    <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">Game Rules</a>
+    <div class="menuPick">
+      <button class="scissor">SCISSOR</button>
+      <button class="rock">ROCK</button>
+      <button class="paper">PAPER</button>
+    </div>    
+    <div class="compPick">Computer picked:</div>  
+    <div class="gameResult">RESULT:</div>   
+    <div class="finalStats">Score:</div> 
+  </div>
 </body>
 </html>
